--- a/login.html
+++ b/login.html
@@ -20,11 +20,11 @@
             <div>
                 <ul class="nav">
                     <li class="navlink"><a href="#">Home</a></li>
-                    <li class="navlink"><a href="#">Cinemas</a></li>
+                    <li class="navlink"><a href="cinemas.html">Cinemas</a></li>
                     <li class="navlink"><a href="#">Now Showing</a></li>
                 </ul>
             </div>
-            <a class="navlink login active" href="#">Login</a>
+            <a class="navlink login active" href="login.html">Login</a>
         </header>
 
         <div class="wrapper">
