--- a/cinemas.html
+++ b/cinemas.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <h3>Opus Cinemas</h3>
+            <h3 class="opus-name">Opus Cinemas</h3>
             <div>
                 <ul class="nav">
                     <li class="navlink"><a href="#">Home</a></li>
