home page with images

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <h3>Opus Cinemas</h3>
             <div>
                 <ul class="nav">
-                    <li class="navlink"><a href="#">Home</a></li>
+                    <li class="navlink"><a href="home.html">Home</a></li>
                     <li class="navlink"><a href="cinemas.html">Cinemas</a></li>
                     <li class="navlink"><a href="#">Now Showing</a></li>
                 </ul>
