Refactor navigation links in home and cinemas pages

--- a/cinemas.html
+++ b/cinemas.html
@@ -19,8 +19,8 @@
             <div>
                 <ul class="nav">
                     <li class="navlink"><a href="home.html">Home</a></li>
-                    <li class="navlink active">
-                        <a href="cinemas.html">Cinemas</a>
+                    <li class="navlink">
+                        <a class="active" href="cinemas.html">Cinemas</a>
                     </li>
                     <li class="navlink"><a href="#">Now Showing</a></li>
                 </ul>
