--- a/home.html
+++ b/home.html
@@ -25,12 +25,14 @@
             <h3>Opus Cinemas</h3>
             <div>
                 <ul class="nav">
-                    <li class="navlink"><a href="home.html">Home</a></li>
+                    <li class="navlink">
+                        <a class="active" href="home.html">Home</a>
+                    </li>
                     <li class="navlink"><a href="cinemas.html">Cinemas</a></li>
                     <li class="navlink"><a href="#">Now Showing</a></li>
                 </ul>
             </div>
-            <a class="navlink login active" href="login.html">Login</a>
+            <a class="navlink login" href="login.html">Login</a>
         </header>
 
         <div class="wrapper">
