--- a/cinemas.html
+++ b/cinemas.html
@@ -18,7 +18,7 @@
             <h3 class="opus-name">Opus Cinemas</h3>
             <div>
                 <ul class="nav">
-                    <li class="navlink"><a href="home.html">Home</a></li>
+                    <li class="navlink"><a href="home.php">Home</a></li>
                     <li class="navlink">
                         <a class="active" href="cinemas.html">Cinemas</a>
                     </li>
